--- a/src/components/pages/portfolio/PortfolioItem.css
+++ b/src/components/pages/portfolio/PortfolioItem.css
@@ -2,6 +2,12 @@
     width: 375px;
     background-color: #A3E4D7;
     border-radius: 20px;
+    transition: box-shadow .4s ease;
+}
+
+.portfolioItem:hover {
+    box-shadow: 0px 0px 18px 0px rgba(0, 0, 0, 0.75);
+    transition: box-shadow .4s ease;
 }
 
 .portfolioItem__photo {
